  flag to -1 (unknown) since it can't tell from the date whether it should
  be set.

- Bug #1460340: ``random.sample(dict)`` failed in various ways.  Dicts
  aren't officially supported here, and trying to use them will probably
  raise an exception some day.  But dicts have been allowed, and "mostly
  worked", so support for them won't go away without warning.

Tools/Demos
-----------

Build
-----

- Bug #1502728: Correctly link against librt library on HP-UX.

- OpenBSD 3.9 is now supported.

- Test for sys/statvfs.h before including it, as statvfs is present
  on some OSX installation, but its header file is not.

- Fix test_long failure on Tru64 with gcc by using -mieee gcc option.

Documentation
-------------

- Clarified documentation for tp_as_buffer->bf_getcharbuffer.

- Bug #1337990: clarified that ``doctest`` does not support examples
  requiring both expected output and an exception.


What's New in Python 2.4.3?
===========================

*Release date: 29-MAR-2006*

Core and builtins
-----------------

- A few reference leaks were squished.

- A threading issue that caused random segfaults on some platforms from
  the testsuite was fixed in test_capi.

- Reverted fix for Bug #1379994: Builtin unicode_escape and
  raw_unicode_escape codec now encodes backslash correctly.
  This caused another issue for unicode repr strings being double-escaped
  (SF Bug #1459029). Correct fix will be in 2.5, but is too risky for 2.4.3.

Extension Modules
-----------------

- Patch #1380952: fix SSL objects timing out on consecutive read()s

- Ubuntu bug #29289: Fixed a bug that the gb18030 codec raises
  RuntimeError on encoding surrogate pair area on UCS4 build.

What's New in Python 2.4.3c1?
=============================

*Release date: 23-MAR-2006*

Core and builtins
-----------------

- Bug #1115379: Compiling a Unicode string with an encoding declaration
  now gives a SyntaxError.

- Fix missing check on whether the PendingDeprecationWarning for string